# autobot-autonomy

./: .dockerignore  README.md  docker-compose.yml  entrypoint.sh
docker/: Dockerfile
oled/: autobot-oled.service  install_oled.sh  oled_stats.py
src/: .gitkeep
src/autobot_drivers/: package.xml  setup.cfg  setup.py
src/autobot_drivers/autobot_drivers/: bottle_detector_node.py  joy_teleop_node.py  motor_driver_node.py  teleop_node.py  web_teleop_node.py  yahboom_mcu.py
src/autobot_drivers/autobot_drivers/web/: teleop.html
src/autobot_drivers/launch/: bringup.launch.py
src/missions/: README.md  package.xml  setup.cfg  setup.py
src/missions/launch/: bottle_hunt.launch.py
src/missions/missions/: bottle_hunt_mission_node.py
tools/: download_model.sh  test_leds.py  test_motors.py  test_servos.py
